[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/ui/score.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/civil/icon_flip.png" type="Texture" id=3]
[ext_resource path="res://assets/truck/icon_flip.png" type="Texture" id=4]
[ext_resource path="res://src/main.gd" type="Script" id=5]
[ext_resource path="res://assets/truck/icon.png" type="Texture" id=6]
[ext_resource path="res://assets/garbage/icon_mono.png" type="Texture" id=7]
[ext_resource path="res://assets/ambulance/icon_flip.png" type="Texture" id=8]
[ext_resource path="res://assets/taxi/icon.png" type="Texture" id=9]
[ext_resource path="res://assets/ambulance/icon.png" type="Texture" id=10]
[ext_resource path="res://assets/ambulance/icon_mono.png" type="Texture" id=11]
[ext_resource path="res://assets/garbage/icon.png" type="Texture" id=12]
[ext_resource path="res://assets/police/icon_mono.png" type="Texture" id=13]
[ext_resource path="res://assets/civil/icon_mono.png" type="Texture" id=14]
[ext_resource path="res://assets/police/icon_flip.png" type="Texture" id=15]
[ext_resource path="res://assets/taxi/icon_flip.png" type="Texture" id=16]
[ext_resource path="res://assets/civil/icon.png" type="Texture" id=17]
[ext_resource path="res://assets/taxi/icon_mono.png" type="Texture" id=18]
[ext_resource path="res://assets/truck/icon_mono.png" type="Texture" id=19]
[ext_resource path="res://assets/police/icon.png" type="Texture" id=20]
[ext_resource path="res://assets/garbage/icon_flip.png" type="Texture" id=21]
[ext_resource path="res://assets/ui/best.png" type="Texture" id=22]
[ext_resource path="res://assets/ui/touch_disabled.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/touch_enabled.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 86
font_data = ExtResource( 2 )

[node name="Main" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1080.0
margin_bottom = 600.0
custom_constants/separation = 100

[node name="LogoContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 108.0
alignment = 1

[node name="LogoLabel" type="Label" parent="VBoxContainer/LogoContainer"]
margin_left = 346.0
margin_right = 666.0
margin_bottom = 108.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "AUTO"
align = 1

[node name="TouchButton" type="TextureButton" parent="VBoxContainer/LogoContainer"]
margin_left = 670.0
margin_right = 734.0
margin_bottom = 64.0
size_flags_vertical = 0
shortcut_in_tooltip = false
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 23 )

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 1080.0
margin_bottom = 336.0
size_flags_horizontal = 3
custom_constants/separation = 50
alignment = 1

[node name="TaxiButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 31.0
margin_right = 159.0
margin_bottom = 128.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 9 )

[node name="TruckButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 209.0
margin_right = 337.0
margin_bottom = 128.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="PoliceButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 387.0
margin_right = 515.0
margin_bottom = 128.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 20 )

[node name="AmbulanceButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 565.0
margin_right = 693.0
margin_bottom = 128.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 10 )

[node name="CivilButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 743.0
margin_right = 871.0
margin_bottom = 128.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 17 )

[node name="GarbageButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
margin_left = 921.0
margin_right = 1049.0
margin_bottom = 128.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 436.0
margin_right = 1080.0
margin_bottom = 564.0
custom_constants/separation = 250
alignment = 1

[node name="BestScoreContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 140.0
margin_right = 440.0
margin_bottom = 128.0
custom_constants/separation = 50

[node name="BestScoreIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/BestScoreContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 22 )

[node name="BestScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/BestScoreContainer"]
margin_left = 178.0
margin_top = 15.0
margin_right = 250.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
text = "0"

[node name="BestAutoIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/BestScoreContainer"]
margin_left = 300.0
margin_right = 300.0
margin_bottom = 128.0

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 690.0
margin_right = 940.0
margin_bottom = 128.0
custom_constants/separation = 50

[node name="ScoreIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/ScoreContainer"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer/ScoreContainer"]
margin_left = 178.0
margin_top = 15.0
margin_right = 250.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
text = "0"

[connection signal="pressed" from="VBoxContainer/LogoContainer/TouchButton" to="." method="_on_TouchButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/TaxiButton" to="." method="_on_TaxiButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/TruckButton" to="." method="_on_TruckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/PoliceButton" to="." method="_on_PoliceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/AmbulanceButton" to="." method="_on_AmbulanceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/CivilButton" to="." method="_on_CivilButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/GarbageButton" to="." method="_on_GarbageButton_pressed"]
